test/sema/assignment.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
fn foo() -> void {
}

fn bar() -> i32 {
    return 1;
}

fn main() -> void {
    let x: i32 = 1;

    // CHECK: [[# @LINE + 1 ]]:12: error: assigned value type 'void' doesn't match variable type 'i32'
    x = foo();

    let y: i32 = 3;

    y = 3;

    // CHECK: [[# @LINE + 1 ]]:5: error: 'bar' cannot be mutated
    bar = 3;

    // CHECK: [[# @LINE + 1 ]]:5: error: 'foo' cannot be mutated
    foo = 3;

    let z: i32;
    z = 3;
}

fn assignParam(x: i32) -> void {
    // CHECK: [[# @LINE + 1 ]]:5: error: 'x' cannot be mutated
    x = 1;
}

// CHECK-NOT: {{.*}}